[package]
name = "tmhole"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
chrono = "0.4.43"
